Fix potential crash when icons are missing

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=764921